Added google fonts

--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
   display: block;
   margin: 50px;
   padding-right: 15px;
-  
+  font-family: 'Roboto Condensed', sans-serif;
 }
 .mb-3{
   padding: 20px;
