--- a/src/style.css
+++ b/src/style.css
@@ -18,55 +18,53 @@
 }
 #top {
   position: relative;
-  margin: 10px;
+  margin: 20px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #second-top {
   position: relative;
-  margin: 10px;
+  margin: 20px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #middle {
   position: relative;
-  margin: 10px;
+  margin: 20px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #second-middle {
   position: relative;
-  margin: 10px;
+  margin: 20px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #bottom {
   position: relative;
-  margin: 10px;
+  margin: 20px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #second-bottom {
   position: relative;
-  margin: 10px;
+  margin: 20px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #last-one {
   position: relative;
 ​
-  margin: 10px;
+  margin: 20px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #icon-card {
-  position: relative;
-​
-  margin: 30px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+ padding-bottom:  -20px;
+​box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .fa-sun {
   color: orange;
   font-size: 50px;
-  margin-left: 30px;
+  margin-left: 40px;
 }
 .fa-cloud-sun {
   color: orange;
   font-size: 50px;
-  margin-left: 30px;
+  margin-left: 40px;
 }
 .fa-cloud {
   color: #4481eb;
@@ -110,11 +108,12 @@ ul {
   padding-left: 40px;
   padding-right: 40px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
-  margin-left: 20px;
+  margin-left: 70px;
 }
 #inputPassword2 {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
   flex: 1;
+  margin-left: 70px;
 }
 ​
 .form-inline .form-group {
