--- a/src/style.css
+++ b/src/style.css
@@ -119,10 +119,16 @@ ul {
 .form-inline .form-group {
   flex: 1;
 }
-.active{
+.image.active{
 color: #6f6f6f;
 cursor: default;
 }
-.active:hover{
+.image.active:hover{
   text-decoration: none;
+} 
+
+
+.tempOnMain{
+  font-size: 40px;
+  font-weight: 400;
 }
